5.12.1openmpi
	- updated version of internal OTF to 1.10.1openmpi
	  (see extlib/otf/ChangeLog)
	- fixed detection of Open64 compilers for automatic instrumentation
	- fixed build issues on MacOS using GCC v4.2
	- fixed non-increasing timestamps when flushing the trace buffer
	- fixed a bug in the MPI wrapper functions MPI_Gatherv and MPI_Scatterv
	  which occurred due to illegal access to insignificant parameters on
	  non-root ranks
	- vtunify-mpi:
		- added option '--stats' to unify only summarized information,
		  no events
		- reduced memory usage
	- OPARI: (see tools/opari/ChangeLog:20,21)

5.12
	- updated version of internal OTF to 1.10coelacanth
	  (see extlib/otf/ChangeLog)
	- added support for CUDA runtime tracing via CUPTI callbacks
	- added support for process group counters
	- extended internal API to:
		- create process groups
		- assign attributes to process groups
		  (e.g. is communicator, has counters)
	- improved MPI group/communicator handling:
		- merge groups which have the same members to one group
		- name groups to "MPI Group X"
	- added writing of process begin/end records
	- added support for LIBC [I/O] tracing on Cray XT platforms
	- added environment variable VT_ONOFF_CHECK_STACK_BALANCE to
	  enable/disable check for stack level balance when switching tracing
	  on/off by using the user API
	- added configure option '--[enable|disable]-fortran' to control
	  building of Fortran support
	- install a symbolic link 'vtfiltergen[-mpi]' which is a synonym for
	  'vtfilter[-mpi] --gen'
	- if possible, get resource usage counters for the calling thread
	  instead of the process
	- disabled unnecessary time synchronization on NEC SX platforms
	- removed MPI_Address and MPI_Get_address from MPI wrappers
	- removed limitation of maximum defined MPI handles (groups, comms.,
	  and windows) in a MPI program
	- fixed incorrect handling of MPI_IN_PLACE
	- fixed erroneous handling of MPI_Aint within the Fortran MPI wrappers