@@ -10,8 +10,8 @@ AC_DEFUN([ACVT_IOWRAP],
 	[
 		sav_CPPFLAGS=$CPPFLAGS
 		CPPFLAGS="$CPPFLAGS -D_GNU_SOURCE -D_LARGEFILE64_SOURCE"
+
 		AC_CHECK_FUNCS([ \
-			__fprintf_chk \
 			creat64 \
 			fopen64 \
 			fseeko \
@@ -29,6 +29,15 @@ AC_DEFUN([ACVT_IOWRAP],
 			fsync \
 			fdatasync \
 			lockf])
+
+		AC_CHECK_FUNCS([__fprintf_chk],
+		[
+dnl			Check whether <stdio.h> declares __vfprintf_chk. This should be the case if
+dnl			_FORTIFY_SOURCE is defined (default when using the GNU compiler).
+dnl			Otherwise, we have to declare this function to avoid compiler warnings.
+			AC_CHECK_DECLS([__vfprintf_chk], [], [], [#include <stdio.h>])
+		])
+
 		CPPFLAGS=$sav_CPPFLAGS
 
 		have_iowrap="yes"
